--- a/ColorWheelDemoSilverlight/ColorWheelDemoSilverlight/MainPage.xaml
+++ b/ColorWheelDemoSilverlight/ColorWheelDemoSilverlight/MainPage.xaml
@@ -1,18 +1,22 @@
 ﻿<UserControl x:Class="ColorWheelDemoSilverlight.MainPage"
-    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+             xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+             xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              mc:Ignorable="d"
              xmlns:local="clr-namespace:ColorWheelDemoSilverlight"
-             d:DesignHeight="600" d:DesignWidth="600">
+             d:DesignHeight="600"
+             d:DesignWidth="600">
 
     <Grid x:Name="LayoutRoot">
         <!--<Grid.Effect>
             <BlurEffect Radius="2" />
         </Grid.Effect>-->
-       
-       
+        <local:HsvWheelColorPicker>
+            <local:ColorPoint Color="LightGreen" />
+            <local:ColorPoint Color="Red" />
+        </local:HsvWheelColorPicker>
+
     </Grid>
 </UserControl>
  
