--- a/ColorWheelDemoSilverlight/ColorWheelDemoSilverlight/Themes/Generic.xaml
+++ b/ColorWheelDemoSilverlight/ColorWheelDemoSilverlight/Themes/Generic.xaml
@@ -1,9 +1,9 @@
 <ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                     xmlns:local="clr-namespace:ColorWheelDemoSilverlight">
-    <local:ColorToBrushConverter x:Key="ColorToBrushConverter"/>
-    <local:ColorToAngleConverter x:Key="ColorToAngleConverter"/>
-    
+    <local:ColorToBrushConverter x:Key="ColorToBrushConverter" />
+    <local:ColorToAngleConverter x:Key="ColorToAngleConverter" />
+
     <Style TargetType="local:HsvWheel">
         <Setter Property="Template">
             <Setter.Value>
@@ -18,15 +18,97 @@
         </Setter>
     </Style>
 
+    <Style x:Key="ThumbStyle"
+           TargetType="Thumb">
+        <Setter Property="Background"
+                Value="{x:Null}" />
+        <Setter Property="BorderThickness"
+                Value="1" />
+        <Setter Property="IsTabStop"
+                Value="False" />
+        <Setter Property="BorderBrush"
+                Value="{x:Null}" />
+        <Setter Property="Template">
+            <Setter.Value>
+                <ControlTemplate TargetType="Thumb">
+                    <Grid x:Name="grid">
+                        <VisualStateManager.VisualStateGroups>
+                            <VisualStateGroup x:Name="CommonStates">
+                                <VisualState x:Name="Normal" />
+                                <VisualState x:Name="MouseOver">
+                                    <Storyboard>
+                                        <DoubleAnimation Duration="0"
+                                                         To="1"
+                                                         Storyboard.TargetProperty="(UIElement.Effect).(DropShadowEffect.Opacity)"
+                                                         Storyboard.TargetName="grid" />
+                                      
+                                    </Storyboard>
+                                </VisualState>
+                                <VisualState x:Name="Pressed">
+
+                                    <Storyboard>
+                                        <DoubleAnimation Duration="0"
+                                                         To="1"
+                                                         Storyboard.TargetProperty="(UIElement.Effect).(DropShadowEffect.Opacity)"
+                                                         Storyboard.TargetName="grid" />
+                                        <DoubleAnimation Duration="0"
+                                                         To="4"
+                                                         Storyboard.TargetProperty="(UIElement.Effect).(DropShadowEffect.BlurRadius)"
+                                                         Storyboard.TargetName="grid" />
+                                    </Storyboard>
+
+                                </VisualState>
+                                <VisualState x:Name="Disabled">
+                                    <Storyboard>
+                                        <DoubleAnimation Duration="0"
+                                                         To=".55"
+                                                         Storyboard.TargetProperty="Opacity"
+                                                         Storyboard.TargetName="DisabledVisualElement" />
+                                    </Storyboard>
+                                </VisualState>
+                            </VisualStateGroup>
+                            <VisualStateGroup x:Name="FocusStates">
+                                <VisualState x:Name="Focused">
+                                    <Storyboard>
+                                        <DoubleAnimation Duration="0"
+                                                         To="1"
+                                                         Storyboard.TargetProperty="Opacity"
+                                                         Storyboard.TargetName="FocusVisualElement" />
+                                    </Storyboard>
+                                </VisualState>
+                                <VisualState x:Name="Unfocused" />
+                            </VisualStateGroup>
+                        </VisualStateManager.VisualStateGroups>
+                        <Grid.Effect>
+                            <DropShadowEffect ShadowDepth="0"
+                                              Opacity="0" 
+                                              BlurRadius="8"/>
+                        </Grid.Effect>
+                        <Ellipse Stroke="Black"
+                                 StrokeThickness="1" />
+                        <Ellipse 
+                                 Stroke="White"
+                                 StrokeThickness="1"
+                                 Margin="1"
+                                 Fill="{TemplateBinding Background}" />
+
+                    </Grid>
+                </ControlTemplate>
+            </Setter.Value>
+        </Setter>
+    </Style>
+
     <Style TargetType="local:ColorPointVisual">
         <Setter Property="Template">
             <Setter.Value>
                 <ControlTemplate TargetType="local:ColorPointVisual">
-                    <Border>
-                        <Ellipse Fill="{Binding RelativeSource={RelativeSource Mode=TemplatedParent},Path=ColorPoint.Color,Converter={StaticResource ColorToBrushConverter} }"
-                                 Height="20"
-                                 Width="20" />
-                    </Border>
+                    <Grid>
+                        <Thumb x:Name="ThumbElement"
+                               Height="30"
+                               Width="30"
+                               Style="{StaticResource ThumbStyle}"
+                               Background="{Binding RelativeSource={RelativeSource Mode=TemplatedParent},Path=ColorPoint.Color,Converter={StaticResource ColorToBrushConverter}}" />
+                    </Grid>
                 </ControlTemplate>
             </Setter.Value>
         </Setter>
@@ -36,26 +118,44 @@
         <Setter Property="Template">
             <Setter.Value>
                 <ControlTemplate TargetType="local:HsvWheelColorPicker">
-                    <Border Background="{TemplateBinding Background}"
-                            BorderBrush="{TemplateBinding BorderBrush}"
-                            BorderThickness="{TemplateBinding BorderThickness}">
-                        <ItemsControl>
+                    <Grid Background="{TemplateBinding Background}">
+                        <Grid.Resources>
+                            <local:TemplatedParentBridge x:Key="TemplatedParentBridge" TemplatedParent="{Binding RelativeSource={RelativeSource Mode=TemplatedParent}}"/>
+                        </Grid.Resources>
+                        <local:HsvWheel x:Name="Wheel" />
+                        <ItemsControl ItemsSource="{TemplateBinding ColorPoints}">
                             <ItemsControl.ItemTemplate>
                                 <DataTemplate DataType="local:ColorPoint">
-                                    <local:ColorPointVisual HorizontalAlignment="Center" VerticalAlignment="Center" RenderTransformOrigin="0.5,0.5">
-                                        <local:ColorPointVisual.RenderTransform>
-                                            <CompositeTransform Rotation="{Binding Color,Converter={StaticResource ColorToAngleConverter}}"/>
-                                        </local:ColorPointVisual.RenderTransform>
-                                    </local:ColorPointVisual>
+                                    <Grid x:Name="ItemTemplateRoot">
+                                        <Grid.Resources>
+                                            <local:ColorAndRadiusToTransformXBridge x:Key="SaturationAndRadiusToTransformXBridge"
+                                                                                    AttachedElement="{Binding ElementName=ItemTemplateRoot}"
+                                                                                    Color="{Binding ElementName=ItemTemplateRoot,Path=DataContext.Color}" />
+                                        </Grid.Resources>
+                                        <local:ColorPointVisual HorizontalAlignment="Center"
+                                                                VerticalAlignment="Center"
+                                                                RenderTransformOrigin="0.5,0.5"
+                                                                ColorPoint="{Binding}"
+                                                                DragDeltaCommand="{Binding Source={StaticResource TemplatedParentBridge},Path=TemplatedParent.ColorPointVisualDragDeltaCommand}"
+                                                                DragStartedCommand="{Binding Source={StaticResource TemplatedParentBridge},Path=TemplatedParent.ColorPointVisualDragStartedCommand}"
+                                                               >
+                                            <local:ColorPointVisual.RenderTransform>
+                                                <TransformGroup>
+                                                    <TranslateTransform X="{Binding Source={StaticResource SaturationAndRadiusToTransformXBridge},Path=TranslateX}" />
+                                                    <RotateTransform Angle="{Binding Color,Converter={StaticResource ColorToAngleConverter}}" />
+                                                </TransformGroup>
+                                            </local:ColorPointVisual.RenderTransform>
+                                        </local:ColorPointVisual>
+                                    </Grid>
                                 </DataTemplate>
                             </ItemsControl.ItemTemplate>
                             <ItemsControl.ItemsPanel>
                                 <ItemsPanelTemplate>
-                                    <Grid/>
+                                    <Grid />
                                 </ItemsPanelTemplate>
                             </ItemsControl.ItemsPanel>
                         </ItemsControl>
-                    </Border>
+                    </Grid>
                 </ControlTemplate>
             </Setter.Value>
         </Setter>
